--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-echo "# Git-Repo" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git remote add origin https://github.com/malade1/Git-Repo.git
-git push -u origin main
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+
+  </body>
+</html>
